initialize MarbleClock to current date and time

BUG: 271795